--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,29 +40,38 @@ nav li a:hover{
 	background: url(../img/spis.png);
     background-position: -138px -44px;    
     padding: 1px 9px;
+    position: relative;
 }
 
 
 /*spisok*/
+#app{
+	position: absolute;
+	width: 100%;
+	display: none;
+	top: 0;
+	height: 100%;
+	z-index: 5;
+}
+
 .spisok{
 	position: absolute;
+	transition: all 1s ease 0s;
     padding: 28px;
     padding-right: 27px;
     padding-bottom: 0;
     text-align: left;
     white-space: normal;
     width: 265px;
+    display: none;
     height: 470px;
-    /*height: 496px;*/
     min-height: 196px;
     background-color: #fff;
-    /*overflow-y: auto;*/
     border: 1px solid #ccc;
     border-color: rgba(0,0,0,.2);
     color: #000;
     -webkit-box-shadow: 0 2px 10px rgba(0,0,0,.2);
     box-shadow: 0 2px 10px rgba(0,0,0,.2);
-   /* display: none;*/
     outline: none;
     overflow: hidden;
     position: absolute;
@@ -76,9 +85,8 @@ nav li a:hover{
     z-index: 10;
 }
 
-.spisok:before{
-	content: '';
-	display: block;
+.spisok+.spis_pointer{
+	display: none;
 	color: white;
 	background-color: #fff;
 	position: absolute;
@@ -87,9 +95,9 @@ nav li a:hover{
 	border-right: none;
 	width: 10px;
 	height: 10px;
-	top: -6.5px;
+	top: 49px;
 	z-index: 15;
-	right: 80px;
+	right: 124px;
 	transform: rotate(45deg);
 }
 
@@ -168,7 +176,6 @@ hr{
 /*after click more*/
 .morespisok{
 	overflow-y: scroll;
-	height: 
 }
 
 .morespisok #more{
